[project]
name = "resy-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "factory-boy>=3.3.3",
    "httpx2>=0.1.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.1",
    "pytest>=9.0.3",
    "requests>=2.34.2",
    "typing>=3.10.0.0",
    "uvicorn>=0.49.0",
]
